--- a/outputs/paper/reference.bib
+++ b/outputs/paper/reference.bib
@@ -105,3 +105,12 @@ https://github.com/sharlagelfand/opendatatoronto/},
     url = {https://www.cp24.com/two-dead-in-mass-shooting-in-scarborough-infant-among-injured-1.881607},
     }  
     
+@Manual{citeR,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
+    
